--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   </li>
 
                   <li>
-                     <a href="#history" class="nav__link">bout scutty</a>
+                     <a href="#history" class="nav__link">bout scuttie</a>
                   </li>
                </ul>
 
