--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                   </h2>
 
                   <p class="explore__description">
-                     ball coming soon. scuttie excited. he push the ball out but he keep it. he customdian. he keep but he give. 1st August he pushes. he like fair launch cause scottie fair. solana. he like jeets, jeets nice people from india, scottie like. for scuttie, skype is the limit. 
+                     ball coming soon. scuttie excited. he push the ball out but he keep it. he customdiam. he give but he keep. 1st August he pushes. he like fair launch cause scuttie fair. solana. he like jeets, jeets nice people from india, scuttie like. for scuttie, skype is the limit. 
                   </p>
 
                   <img src="assets/img/explore-planet.svg" alt="image" class="explore__planet">
@@ -202,7 +202,7 @@
                   <img src="assets/img/history-img-2.svg" alt="image" class="history__img">
                   <p class="history__description">
                      <span>mikey</span>
-                     took my ball once, yeah? he took it personal.
+                     took scuttie ball once, yeah? mikey took it personal.
                   </p>
                </article>
 
@@ -210,7 +210,7 @@
                   <img src="assets/img/history-img-3.svg" alt="image" class="history__img">
                   <p class="history__description">
                      <span>scuttie team player</span>
-                     scutie aint solo boy, scuttie a team player yeah? a movie bout scuttie out ther or sumefin, de last balldance or sumefin…it about scuttie…a bit…he in it, yeah? scuttie don't like mikey, mikey make scuttie sad.
+                     scuttie aint solo boy, scuttie a team player yeah? a movie bout scuttie out ther or sumefin, de last balldance or sumefin…it about scuttie…he in it, yeah? scuttie don't like mikey, mikey make scuttie sad.
                   </p>
                </article>
             </div>
