--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                <article class="history__card">
                   <img src="assets/img/history-img-1.svg" alt="image" class="history__img">
                   <p class="history__description">
-                     <span>scuttie like a feel ballson. feel a big man but</span>
+                     <span>scuttie like feel jackballson. feel a big man but</span>
                      soft hands. scuttie like soft hands on the ball
                   </p>
                </article>
