--- a/index.html
+++ b/index.html
@@ -253,11 +253,8 @@
                </ul>
 
                <div class="footer__social">
-                  <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
-                     <i class="ri-facebook-fill"></i>
-                  </a>
 
-                  <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                  <a href="https://www.telegram.com/" target="_blank" class="footer__social-link">
                      <i class="ri-instagram-fill"></i>
                   </a>
 
