--- a/index.html
+++ b/index.html
@@ -254,13 +254,14 @@
 
                <div class="footer__social">
 
-                  <a href="https://www.telegram.com/" target="_blank" class="footer__social-link">
-                     <i class="ri-instagram-fill"></i>
+              <a href="https://t.me/+k1OB2R1WTVQ5YzQ0" target="_blank" class="footer__social-link">
+                     <i class="ri-telegram-fill"></i>
                   </a>
 
-                  <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                  <a href="https://x.com/scuttieball" target="_blank" class="footer__social-link">
                      <i class="ri-twitter-x-fill"></i>
                   </a>
+                  
                </div>
             </div>
 
