--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <header class="header" id="header">
          <nav class="nav container">
             <a href="#" class="nav__logo">
-               <img src="assets/img/logo.svg" alt="image"> scuttie ball
+               <img src="assets/img/logo.svg" alt="image"> scuttie rugged
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -33,11 +33,11 @@
                   </li>
 
                   <li>
-                     <a href="#travel" class="nav__link">why give ball</a>
+                     <a href="#travel" class="nav__link">why rug</a>
                   </li>
 
                   <li>
-                     <a href="#explore" class="nav__link">wen ball</a>
+                     <a href="#explore" class="nav__link">wen rug</a>
                   </li>
 
                   <li>
@@ -70,12 +70,12 @@
                <div class="home__data">
                   <h1 class="home__title">
                      <span>SCUTTIE</span>
-                     <span>BALL</span>
+                     <span>RUGGED</span>
                      <!--<span>SPACE</span>-->
                   </h1>
-                  <h2>scuttie have 5 balls, yeah? he no need no 5 balls. he give 1 ball. 5 balls too many for scuttie, yeah? </h2>
+                  <h2>scuttie have ball yeah? you buy scuttie ball yeah. scuttie dumps on your head yeah? </h2>
 
-                  <a href="#explore" class="button">show ball</a>
+                  <a href="#explore" class="button">get rugged</a>
 
                   <img src="assets/img/home-ovni.svg" alt="image" class="home__ovni">
                </div>
@@ -90,7 +90,7 @@
 
             <div class="travel__container container">
                <h2 class="section__title">
-                  WHY SCUTTIE<span>GIVE BALL</span>
+                  WHY SCUTTIE<span>RUGGED</span>
                </h2>
 
                <div class="travel__swiper swiper">
@@ -98,44 +98,44 @@
                      <article class="travel__card swiper-slide">
                         <img src="assets/img/travel-planet-1.svg" alt="image" class="travel__img">
 
-                        <h3 class="travel__title">fondle</h3>
+                        <h3 class="travel__title">need money</h3>
                         <!--<span class="travel__info">54.06 million km</span>-->
 
                         <p class="travel__description">
-                           you take a bit of a scuttie ball, yeah? you hold the scuttie ball, yeah?
+                           you take a bit of a scuttie ball, yeah? you take it, scuttie ruggs
                         </p>
                      </article>
 
                      <article class="travel__card swiper-slide">
                         <img src="assets/img/travel-planet-2.svg" alt="image" class="travel__img">
 
-                        <h3 class="travel__title">cuddle</h3>
+                        <h3 class="travel__title">ball made scuttie rug</h3>
                         <!--<span class="travel__info">148.14 million km</span>!-->
 
                         <p class="travel__description">
-                           the ball legendary. the ball cuddles scuttie to sleep.sometimes ball can't sleep, asks scuttie to help it sleep. scuttie helps.                           
+                           ball made scuttie rugged. ball told scuttie to rug.                           
                         </p>
                      </article>
 
                      <article class="travel__card swiper-slide">
                         <img src="assets/img/travel-planet-3.svg" alt="image" class="travel__img">
 
-                        <h3 class="travel__title">baller</h3>
+                        <h3 class="travel__title">bum sore</h3>
                         <!--<span class="travel__info">96.12 million km</span>-->
 
                         <p class="travel__description">
-                           ball always have scuttie back. scuttie safe, ball behind scuttie.                            
+                           scuttie bum sore yeah? ball cums every night. scuttie need to run away from ball. need getaway money.                         
                         </p>
                      </article>
 
                      <article class="travel__card swiper-slide">
                         <img src="assets/img/travel-planet-4.svg" alt="image" class="travel__img">
 
-                        <h3 class="travel__title">he play</h3>
+                        <h3 class="travel__title">community dunk </h3>
                         <!--<span class="travel__info">86.609 million km</span>-->
 
                         <p class="travel__description">
-                           it ain’t bout scuttie, yeah? dis bout baseball, yeah? scuttie digs football. dis bout coming to the ring for the fifth round… or sumefin, together, yeah?
+                           scuttie like dunk yeah? he dunk on community. he dunk hard. 
                            
                         </p>
                      </article>
@@ -156,19 +156,19 @@
                   </h2>
 
                   <p class="explore__description">
-                     ball coming soon. scuttie excited. he push the ball out but he keep it. he customdiam. he give but he keep. 1st August he pushes. he like fair launch cause scuttie fair. solana. he like jeets, jeets nice people from india, scuttie like. for scuttie, skype is the limit. 
+                     scuttie dropped ball yeah? he dropped it hard. rugged. he customdiam. he scamtoshi pipimoto. he give but he keep. he ruggs. he says fair launch but no fair launch. scuttie dumps on you. for scuttie, skype is the limit - he can always drop more balls.
                   </p>
 
                   <img src="assets/img/explore-planet.svg" alt="image" class="explore__planet">
 
                   <div class="explore__info">
                      <div>
-                        <h3 class="explore__info-title">MOON</h3>
-                        <h2 class="explore__info-number">1st AUGUST</h2>
+                        <h3 class="explore__info-title">WEN RUG</h3>
+                        <h2 class="explore__info-number">SOON</h2>
                      </div>
 
                      <div>
-                        <h3 class="explore__info-title">PLATFORM</h3>
+                        <h3 class="explore__info-title">YOU'RE RUGGED ON</h3>
                         <h2 class="explore__info-number">
                            solana, dex TBC <span></span>
                         </h2>
@@ -193,7 +193,7 @@
                <article class="history__card">
                   <img src="assets/img/history-img-1.svg" alt="image" class="history__img">
                   <p class="history__description">
-                     <span>scuttie like feel jackballson. feel a big man but</span>
+                     <span>scuttie like a feel ballson. feel a big man but</span>
                      soft hands. scuttie like soft hands on the ball
                   </p>
                </article>
@@ -248,25 +248,24 @@
                   </li>
 
                   <li>
-                     <a href="#explore" class="footer__link">wen ball</a>
+                     <a href="#explore" class="footer__link">wen rug</a>
                   </li>
                </ul>
 
                <div class="footer__social">
 
-              <a href="https://t.me/+k1OB2R1WTVQ5YzQ0" target="_blank" class="footer__social-link">
+                  <a href="https://t.me/+k1OB2R1WTVQ5YzQ0" target="_blank" class="footer__social-link">
                      <i class="ri-telegram-fill"></i>
                   </a>
 
-                  <a href="https://x.com/scuttieball" target="_blank" class="footer__social-link">
+                  <a href="https://x.com/scuttierugged" target="_blank" class="footer__social-link">
                      <i class="ri-twitter-x-fill"></i>
                   </a>
-                  
                </div>
             </div>
 
             <span class="footer__copy">
-               &#169; take scuttie ball
+               &#169; take scuttie rug
             </span>
          </div>
       </footer>
