--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="explore__container container grid">
                <div class="explore__data">
                   <h2 class="section__title">
-                     WEN <span>BALL</span>
+                     WEN <span>RUG</span>
                   </h2>
 
                   <p class="explore__description">
