--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                   </li>
 
                   <li>
-                     <a href="#travel" class="footer__link">why give ball</a>
+                     <a href="#travel" class="footer__link">why rug</a>
                   </li>
 
                   <li>
